1.修改部分文件,增加文档描述

--- a/3.SpringSecuritySocial.md
+++ b/3.SpringSecuritySocial.md
@@ -1886,3 +1886,316 @@ public class QQAutoConfig extends SocialAutoConfigurerAdapter {
 系统当前用户需要绑定第三方账号或系统当前用户解绑第三方账号
 
 绑定的流程跟社交登陆的流程是大同小异的；解绑实现逻辑比较简单，是从数据库中删除当前账户与第三方账户的记录
+
+###### 绑定信息
+
+Spring Security默认提供当前账户绑定信息的服务,服务的请求地址为`/conncet`,访问的方式的`POST`
+
+`ConnectController.java`
+
+```java
+@Controller
+@RequestMapping({"/connect"})
+public class ConnectController implements InitializingBean {
+@RequestMapping(
+    method = {RequestMethod.GET}
+)
+public String connectionStatus(NativeWebRequest request, Model model) {
+    this.setNoCache(request);
+    this.processFlash(request, model);
+	//当前用户所有的绑定信息
+    Map<String, List<Connection<?>>> connections = this.connectionRepository.findAllConnections();
+	//获得所有的第三方支持
+    model.addAttribute("providerIds", this.connectionFactoryLocator.registeredProviderIds());
+//将用户信息放进model
+    model.addAttribute("connectionMap", connections);
+	//返回视图名字:/connect/status
+	//spring默认没有提供这个视图，需要进行自定义
+    return this.connectView();
+}
+
+}
+```
+
+方法中获取了当前账户所有的,并且已经在系统中配置了的第三方应用的绑定信息,并且存入Model中.
+
+**自定义回显视图`connect/status`**
+
+1. 定义可扩展输出借口
+
+```java
+/**
+ * 为扩展提供spring 社交绑定状态信息返回提供接口
+ * 各个模块可实现该接口逻辑进行状态信息的输出
+ *
+ * created by chuIllusions_tan on 20180308
+ */
+public interface AbstractConnectionViewProcessor {
+
+    /**
+     * 实现社交绑定状态信息（内容自定义）的输出
+     * @param model spring social 在ConnectController内存将此属性填充,含有属性:providerIds、connectionMap等，我们只需要用就可以了
+     * @param request 请求体
+     * @param response 响应体
+     */
+    void outputModel(Map<String, Object> model, HttpServletRequest request,HttpServletResponse response) throws IOException;
+
+}
+```
+
+2. 实现视图定义
+
+```java
+/**
+ * 社交账号绑定状态视图
+ *
+ * created by chuIllusions_tan on 20180308
+ */
+@Component("connect/status")
+public class AbstractConnectionStatusView extends AbstractView {
+	
+	@Autowired
+	private AbstractConnectionViewProcessor abstractConnectionViewProcessor;
+
+	@SuppressWarnings("unchecked")
+	@Override
+	protected void renderMergedOutputModel(Map<String, Object> model, HttpServletRequest request,
+			HttpServletResponse response) throws Exception {
+		abstractConnectionViewProcessor.outputModel(model,request,response);
+	}
+
+}
+```
+
+3. 定义`AbstractConnectionViewProcessor`借口默认实现类
+
+```java
+/**
+ * 默认提供的输出社交绑定信息的实现类
+ *
+ * created by chuIllusions_tan on 20180308
+ */
+public class DefaultConnectionViewProcessor implements AbstractConnectionViewProcessor {
+
+    private ObjectMapper objectMapper;
+
+    public DefaultConnectionViewProcessor(ObjectMapper objectMapper){
+        this.objectMapper = objectMapper;
+    }
+
+    @Override
+    public void outputModel(Map<String, Object> model, HttpServletRequest request, HttpServletResponse response) throws IOException {
+        Map<String, List<Connection<?>>> connections = (Map<String, List<Connection<?>>>) model.get("connectionMap");
+
+        Map<String, Boolean> result = new HashMap<>();
+        for (String key : connections.keySet()) {
+            result.put(key, CollectionUtils.isNotEmpty(connections.get(key)));
+        }
+
+        response.setContentType("application/json;charset=UTF-8");
+        response.getWriter().write(objectMapper.writeValueAsString(result));
+    }
+
+}
+```
+
+4. 配置输出接口
+
+在社交总配置`SocialConfig.java`代码中,已经贴出了相关配置:
+
+```java
+	 /**
+	 * 配置默认的社交绑定状态信息输出器
+	 * 可扩展
+	 * 子模块为定义,则使用默认提供的输出类
+	 */
+	@Bean
+	@ConditionalOnMissingBean(AbstractConnectionViewProcessor.class)
+	public AbstractConnectionViewProcessor connectionViewProcessor(ObjectMapper objectMapper){
+		DefaultConnectionViewProcessor processor = new DefaultConnectionViewProcessor(objectMapper);
+		return processor;
+	}
+```
+
+
+
+###### 绑定与解绑
+
+**绑定与解绑的实现**
+
+Spring Social已经实现了绑定与解绑的逻辑,提供了`/connect/providerId`服务,根据请求方法的不同,执行不同的业务处理,POST方式进行绑定,DELETE方式进行解绑,与绑定信息的获取同属与同一个类中,`providerId`代表系统已经配置好的服务提供商的id
+
+1. 源码分析
+
+```java
+@Controller
+@RequestMapping({"/connect"})
+public class ConnectController implements InitializingBean {
+    @RequestMapping(
+        value = {"/{providerId}"},
+        method = {RequestMethod.POST}
+    )
+    //跳转到授权
+    public RedirectView connect(@PathVariable String providerId, NativeWebRequest request) {
+        ConnectionFactory<?> connectionFactory = this.connectionFactoryLocator.getConnectionFactory(providerId);
+        MultiValueMap<String, String> parameters = new LinkedMultiValueMap();
+        this.preConnect(connectionFactory, parameters, request);
+
+        try {
+            return new RedirectView(this.connectSupport.buildOAuthUrl(connectionFactory, request, parameters));
+        } catch (Exception var6) {
+            this.sessionStrategy.setAttribute(request, "social_provider_error", var6);
+            return this.connectionStatusRedirect(providerId, request);
+        }
+    }
+
+    //获得授权码,根据授权码获取token,用户信息,最后返回一个Connection
+    @RequestMapping(
+        value = {"/{providerId}"},
+        method = {RequestMethod.GET},
+        params = {"code"}
+    )
+    public RedirectView oauth2Callback(@PathVariable String providerId, NativeWebRequest request) {
+        try {
+            OAuth2ConnectionFactory<?> connectionFactory = (OAuth2ConnectionFactory)this.connectionFactoryLocator.getConnectionFactory(providerId);
+            Connection<?> connection = this.connectSupport.completeConnection(connectionFactory, request);
+            this.addConnection(connection, connectionFactory, request);
+        } catch (Exception var5) {
+            this.sessionStrategy.setAttribute(request, "social_provider_error", var5);
+            logger.warn("Exception while handling OAuth2 callback (" + var5.getMessage() + "). Redirecting to " + providerId + " connection status page.");
+        }
+
+        return this.connectionStatusRedirect(providerId, request);
+    }
+    
+    @RequestMapping(
+        value = {"/{providerId}"},
+        method = {RequestMethod.DELETE}
+    )
+    
+    //解绑业务,进行数据库记录的解绑
+    public RedirectView removeConnections(@PathVariable String providerId, NativeWebRequest request) {
+        ConnectionFactory<?> connectionFactory = this.connectionFactoryLocator.getConnectionFactory(providerId);
+        this.preDisconnect(connectionFactory, request);
+        this.connectionRepository.removeConnections(providerId);
+        this.postDisconnect(connectionFactory, request);
+        return this.connectionStatusRedirect(providerId, request);
+    }
+}
+```
+
+**绑定与解绑返回的视图**
+
+从上面列中源码中绑定的两个方法,则是走OAuth协议,与之前的实现QQ,微信登录流程是一样的,绑定成功与解绑成功后会跳转指定的视图
+
+```java
+protected String connectView(String providerId) {
+        return this.getViewPath() + providerId + "Connect";
+    }
+
+    protected String connectedView(String providerId) {
+        return this.getViewPath() + providerId + "Connected";
+    }
+```
+
+而且,sping social并未提供该视图,因此需要自定义
+
+1. 定义绑定与解绑视图处理器接口
+
+```java
+/**
+ * 抽象的绑定成功与解绑成功信息回显处理器
+ * 实现可扩展接口
+ *
+ *
+ * created by chuIllusions_tan 20180322
+ */
+public interface AbstractBindingProcessor {
+
+
+    /**
+     * 实现社交绑定与解绑的信息输出
+     * @param model 包含解绑和绑定成功后的一些信息
+     * @param request 请求体
+     * @param response 响应体
+     */
+    void outputModel(Map<String, Object> model, HttpServletRequest request, HttpServletResponse response) throws IOException;
+    
+    
+}
+
+```
+
+2. 定义默认的视图处理器实现类
+
+```java
+/**
+ * 默认的绑定与解绑处理器实现类
+ * 
+ * created by chuIllusions_tan 20180322
+ */
+public class DefaultBindingProcessor implements AbstractBindingProcessor {
+
+    @Override
+    public void outputModel(Map<String, Object> model, HttpServletRequest request, HttpServletResponse response) throws IOException {
+
+        response.setContentType("text/html;charset=UTF-8");
+        if (model.get("connections") == null) {
+            response.getWriter().write("<h3>解绑成功</h3>");
+        } else {
+            response.getWriter().write("<h3>绑定成功</h3>");
+        }
+
+    }
+
+}
+```
+
+3. 定义绑定与解绑视图
+
+```java
+/**
+ * spring security 处理第三方登陆解绑与绑定返回结果视图
+ *
+ * created by chuIllusions_tan on 20180308
+ */
+public class AbstractConnectBindingView extends AbstractView {
+
+	private AbstractBindingProcessor abstractBindingProcessor;
+
+	public AbstractConnectBindingView(AbstractBindingProcessor abstractBindingProcessor){
+		this.abstractBindingProcessor = abstractBindingProcessor;
+	}
+
+	@Override
+	protected void renderMergedOutputModel(Map<String, Object> model, HttpServletRequest request,
+			HttpServletResponse response) throws Exception {
+
+		abstractBindingProcessor.outputModel(model,request,response);
+
+	}
+}
+```
+
+4. 视图的配置
+
+`QQAutoConfig.java`中增加配置
+
+```java
+@Bean({"connect/qqConnect", "connect/qqConnected"})
+	@ConditionalOnMissingBean(name = "qqBindingView")
+	public View qqBindingView() {
+		return new AbstractConnectBindingView(new DefaultBindingProcessor());
+	}
+```
+
+`WeixinAutoConfiguration.java`中增加配置
+
+```java
+@Bean({"connect/weixinConnect", "connect/weixinConnected"})
+	@ConditionalOnMissingBean(name = "weixinBindingView")
+	public View weixinBindingView() {
+		return new AbstractConnectBindingView(new DefaultBindingProcessor());
+	}
+```
+
